debug thumbs on blog
