# swagger-output.json
@@ -214,7 +214,7 @@
                 "blog_info": {
                   "example": "any"
                 },
-                "location": {
+                "blog_location": {
                   "example": "any"
                 }
               }
@@ -350,10 +350,10 @@
         }
       }
     },
-    "/api/blog/thumbsChangeOnBlog": {
+    "/api/blog/thumbsAddOnBlog": {
       "put": {
         "tags": [
-          "Blog Others"
+          "Blog Thumb"
         ],
         "description": "",
         "parameters": [
@@ -367,6 +367,39 @@
                   "example": "any"
                 },
                 "thumbsChange": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/blog/thumbsRemoveOnBlog": {
+      "put": {
+        "tags": [
+          "Blog Thumb"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "bid": {
                   "example": "any"
                 }
               }
